--- a/scss/app.scss
+++ b/scss/app.scss
@@ -9,6 +9,7 @@
 @import "base/helpers";
 @import "base/typography";
 @import "base/animations";
+@import "base/spacing";
 
 @import "modules/SiteHeader";
 @import "modules/Strip";
