--- a/scss/modules/_Strip.scss
+++ b/scss/modules/_Strip.scss
@@ -1,12 +1,40 @@
 [am-Strip] {
 	background: $primary-color;
-	padding: 2rem 0;	
+	padding: 1rem 0;	
 	margin: auto;
 	position: relative;
 	display: block;
 
 	@media #{$medium-up} {
+		padding: 2rem 0;
+	}
+
+
+	@media #{$large-up} {
 		padding: 3rem 0;
+	}
+}
+
+[am-Strip~='project'] {
+	
+	@media #{$small-only} {
+		overflow: hidden;
+	}
+
+	h2 {
+		font-size: 1.2 * $scale * 1rem;
+	    line-height: 1.2 * $leading;
+	    
+
+	    @media #{$medium-up} {
+	        font-size: 1.5 * $scale * 1rem;
+	        line-height: 1.5 * $leading;
+	    }
+
+	    @media #{$large-up} {
+	        font-size: 2 * $scale * 1rem;
+	        line-height: 2 * $leading;
+	    }
 	}
 }
 
@@ -52,18 +80,27 @@ a[am-Strip] {
 			}
 		}
 
+		[am-Strip-Anim] {
+			transform: scale(1.04);
+		}
+
 		[am-Strip-Anim~='left'] {
-			transform: scale(1.04) translate3D(-0.5rem, 0, 0);
+			@media #{$medium-up} {
+				transform: scale(1.04) translate3D(-0.5rem, 0, 0);
+			}
+			
 		}
 
 		[am-Strip-Anim~='right'] {
-			transform: scale(1.04) translate3D(0.5rem, 0, 0);
+			@media #{$medium-up} {
+				transform: scale(1.04) translate3D(0.5rem, 0, 0);
+			}
 		}
 	}
 	
 }
 
-a[am-Strip='alt'] {
+a[am-Strip~='alt'] {
 	&:hover {
 		background: #333;
 	}
@@ -74,7 +111,11 @@ a[am-Strip='alt'] {
 }
 
 [am-Strip-Cutout] {
-	margin: -5rem 0;
+
+	@media #{$medium-up} {
+		margin: -5rem 0;	
+	}
+	
 }
 
 [am-Strip-Edges] {
