--- a/scss/base/_settings.scss
+++ b/scss/base/_settings.scss
@@ -31,3 +31,5 @@ $bounce-ease: cubic-bezier(0.68, -0.55, 0.265, 1.55);
 
 $primary-color: #F7D9BF;
 $secondary-color: #26634E;
+
+$main-width: 60rem;
