--- a/scss/modules/_SiteHeader.scss
+++ b/scss/modules/_SiteHeader.scss
@@ -1,5 +1,5 @@
 [am-SiteHeader] {
-	max-width: 60rem;
+	max-width: $main-width;
 	margin: 0 auto;
 	padding: 1rem 1rem 2rem;
 	//text-align: center;
