--- a/partials/foot.html
+++ b/partials/foot.html
@@ -1,4 +1,4 @@
-<div am-SiteFooter data-triEffect>
+<div am-SiteFooter data-triEffect id="contact">
 	<canvas am-SiteFooter-Bg></canvas>
 	
 	<div am-SiteFooter-Inner>
