cleaned up file structure

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -968,4 +968,4 @@ a[am-Strip~='alt']:hover {
         -ms-flex: 0 50%;
         flex: 0 50%; } }
 
-/*# sourceMappingURL=app/app.css.map */
+/*# sourceMappingURL=app.css.map */
