--- a/app/scss/modules/_ArticleMedia.scss
+++ b/app/scss/modules/_ArticleMedia.scss
@@ -32,5 +32,8 @@
 }
 
 [am-ArticleMedia-Compliment] {
-	margin-top: $media-padding;
+
+	@media #{$medium-up} {
+		margin-top: $media-padding;
+	}
 }
