--- a/app/scss/modules/_Slither.scss
+++ b/app/scss/modules/_Slither.scss
@@ -1,9 +1,13 @@
 [am-Slither] {
-	padding: 1.5rem 0;
+	padding: 1.5rem 0 0;
 	background: white;
 
 	@include all-headers {
 		margin: 0;
+	}
+
+	p {
+		margin-top: 0;
 	}
 
 	ul {
