--- a/app/scss/base/_typebase.scss
+++ b/app/scss/base/_typebase.scss
@@ -89,7 +89,7 @@ h2 {
     }
 }
 h3 {
-   font-size: 0.8 * $scale * 1rem;
+   font-size:  $scale * 1rem;
 }
 h4 {
     font-size:  $baseFontSize / 16 * 100%;
